violating_resources/anthos-service-mesh/traffic-policy/samples/dr-tls-enabled/example_disallowed_subset_disabled.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-subset-tls-disable
  namespace: default
spec:
  host: myservice
  subsets:
    - name: v1
      trafficPolicy:
        tls:
          mode: DISABLE
    - name: v2
      trafficPolicy:
        tls:
          mode: SIMPLE
