violating_resources/anthos-service-mesh/traffic-policy/samples/dr-tls-enabled/example_disallowed_traffic_policy_tls_unspecified.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-traffic-leastconn
  namespace: default
spec:
  host: myservice
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
