violating_resources/anthos-service-mesh/traffic-policy/samples/dr-tls-enabled/example_disallowed_unspecified_in_subsets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-subset-no-traffic
  namespace: default
spec:
  host: myservice
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
